@@ -1,27 +1,0 @@
-#!/bin/sh
-
-set -e
-
-THIS_PACKAGE=xserver-xorg-core
-THIS_SCRIPT=postinst
-
-#INCLUDE_SHELL_LIB#
-
-case "$1" in
-  configure)
-  if dpkg --compare-versions "$2" lt-nl 2:1.5.2-1; then
-    remove_conffile_commit /etc/X11/xserver/SecurityPolicy
-    rmdir /etc/X11/xserver 2>/dev/null || true
-  fi
-  if dpkg --compare-versions "$2" lt 2:1.7.3.901-2; then
-    if [ `uname -s` = "Linux" ]; then
-      udevadm trigger --subsystem-match=input --action=change
-    fi
-  fi
-esac
-
-#DEBHELPER#
-
-exit 0
-
-# vim:set ai et sw=2 ts=2 tw=80:
